# Colorize.py

./: colorize.py  constants.py  readme.md  setup.cfg
src/colorize/: __init__.py  colorize.py  constants.py  main.py
