[metadata]
name = colorizelib
version = 1.0.2
author = Bielgomes
author_email = Bielgomesdasilva@hotmail.com
description = A simple library to colorize your terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bielgomes/colorize.py
project_urls =
    Bug Tracker = https://github.com/Bielgomes/Colorize.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src